fix store page product card display gaps

--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -739,3 +739,8 @@ input:focus-visible {
 .tooltipp2 {
     width: 215px !important;
 }
+
+
+.product-name {
+    height: 30px;
+}
